--- a/app/views/listados2/index.html.erb
+++ b/app/views/listados2/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :h2, "Tareas segun Mes" %>
+<%= content_tag :h2, "Tareas Mensuale " %>
 
 <% @tareas_mes.keys.sort.reverse.each do |mes| %>
 	<h3><%= mes.strftime("%B %Y") %></h3>
