--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -48,9 +48,10 @@
     </div>
   </div>
   <div class="form-group">
-	  <% if current_user.has_role? :admin %>
   <div class="form-group">
-    <%= f.label "Permisos", :class => "col-lg-2 control-label" %>
+	  			<% if current_user.has_role? :admin %>
+					<%= f.label "Permisos", :class => "col-lg-2 control-label" %>
+				<%  end %>
     <div class="col-lg-10">
     </div>
   </div>
@@ -58,11 +59,19 @@
 				  <div class="col-lg-2 control-label">
 				  </div>
     <div class="col-lg-10">
+	  			<% if current_user.has_role? :admin %>
 					  <%= check_box_tag "user[role_ids][]", role.id, @user.roles.include?(role) %>
 					  <%= role.name %>
+				  <% else %>
+						  <div class="hidden">
+					  <%= check_box_tag "user[role_ids][]", role.id, @user.roles.include?(role) %>
+					  <%= role.name %>
+						  	
+						  </div>
+				  <% end %>
+
 				  </div>
 			  <% end %>
-		  <% end %>
 	  </div>
   <div class="form-group">
     <div class="col-lg-offset-2 col-lg-10">
