--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -20,7 +20,7 @@
   <div class="form-group">
     <%= f.label :rut, :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
-      <%= f.text_field :rut, :class => "form-control" %>
+	    <%= f.text_field :rut, :class => "form-control", :placeholder => "Ejemplo: '12.345.678-5'" %>
     </div>
   </div>
   <div class="form-group">
@@ -44,7 +44,7 @@
   <div class="form-group">
     <%= f.label :fono, :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
-      <%= f.text_field :fono, :class => "form-control" %>
+      <%= f.number_field :fono, :class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
