--- a/app/views/modulos/index.html.erb
+++ b/app/views/modulos/index.html.erb
@@ -7,11 +7,11 @@
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
+            <th>Cliente</th>
             <th>Nombre</th>
-            <th>Descripcion</th>
             <th></th>
         <th></th>
         <th></th>
@@ -20,11 +20,11 @@
 
     <tbody>
       <%= content_tag_for(:tr, @modulos) do |modulo| %>
-            <td><%= modulo.nombre %></td>
-            <td><%= modulo.descripcion %></td>
-            <td><%= link_to 'Show', modulo %></td>
-        <td><%= link_to 'Edit', edit_modulo_path(modulo) %></td>
-        <td><%= link_to 'Destroy', modulo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= modulo.cliente.nombre.humanize %></td>
+            <td><%= modulo.nombre.humanize %></td>
+	    <td><%= link_to "Editar", edit_modulo_path(modulo), class: "btn btn-primary btn-sm " %></td>
+	    <td><%= detalles_link modulo %></td>
+	    <td><%= delete_link modulo_path(modulo) %></td>
       <% end %>
     </tbody>
   </table>
