--- a/app/views/tareas/show.html.erb
+++ b/app/views/tareas/show.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= link_to tareas_path, :class => 'btn btn-default' do %>
+  <%= link_to tareas_path, :class => 'btn btn-default', "data-no-turbolink" => true do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Volver 
   <% end %>
