--- a/app/views/graficos1/index.html.erb
+++ b/app/views/graficos1/index.html.erb
@@ -6,6 +6,9 @@
 		<div class="span4" id='g3'>
 			<h4>Proyecto</h4>
 		</div>
+		<div class="span4" id='g4'>
+			<h4>Estado Proyecto</h4>
+		</div>
 	</div>
 </div>
 
