--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -14,13 +14,10 @@
   <table class="table table-striped table-hover" id="tareas_usuario">
     <thead>
       <tr>
-	    <th>Cliente</th>
 	    <th>Nombre Tarea</th>
 	    <th>Proyecto</th>
-	    <th>Modulo</th>
 	    <th>HH</th>
 	    <th>Fecha Registro</th>
-	    <th>Fecha Creacion</th>
 	    <th>Acciones</th>
 	    <th></th>
 	    <th></th>
@@ -29,13 +26,10 @@
 
     <tbody>
       <%= content_tag_for(:tr, @tareas) do |tarea| %>
-	      <td><%= tarea.cliente.nombre.humanize %></td>
 	      <td><%= truncate(tarea.nombre, length: 20) %></td>
 	      <td><%= tarea.proyecto.nombre.humanize %></td>
-	      <td><%= tarea.modulo.humanize %></td>
             <td><%= tarea.hh %></td>
-            <td><%= tarea.fecha_registro.strftime("%d %b %Y") %></td>
-            <td><%= tarea.created_at.strftime("%d %b %Y") %></td>
+            <td><%= tarea.fecha_registro.strftime("%d %B %Y") %></td>
 	    <td><%= link_to "Copiar",{} , class: "btn btn-success btn-sm", "data-no-turbolink" => true %> </td>
 	    <td><%= detalles_link tarea %></td>
 	    <td><%= delete_link tarea_path(tarea) %></td>
