--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,18 @@
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
 			<% if current_user %>
-				<li><%= link_to "Tareas", tareas_path, "data-no-turbolink" => true %></li>
+				<% unless current_user.has_role? :admin %>
+					<li><%= link_to "Tareas", tareas_path, "data-no-turbolink" => true %></li>
+				<%  end %>
 
 				<% if current_user.has_role? :admin %>
-						<li><%= link_to "Proyectos", proyectos_path %></li>
+					<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Proyectos<b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><%= link_to "Proyectos en Curso", proyectos_path %></li>
+						<li><%= link_to "Proyectos Cerrados", proyectos_cerrados_path  %></li>
+					</ul>
+					</li>
 
 					<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Listados<b class="caret"></b></a>
@@ -40,7 +48,7 @@
 					<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Reportes<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><%= link_to "Reporte1", reportes1_path  %></li>
+						<li><%= link_to "Fecha Registro vs Fecha Creacion", listados2_path  %></li>
 					</ul>
 					</li>
 
@@ -48,7 +56,6 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Graficos<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><%= link_to "Segun Desarrollador", graficos1_path , "data-no-turbolink" => true %></li>
-						<li><%= link_to "Segun Proyecto", graficos2_path, "data-no-turbolink" => true %></li>
 					</ul>
 					</li>
 
