--- a/app/views/listados1/index.html.erb
+++ b/app/views/listados1/index.html.erb
@@ -1,16 +1,17 @@
-
 <%= javascript_include_tag params[:controller] %>
+
+<%= content_tag :h2, "Listado Tareas" %>
+<%= content_tag :h4, "pd: Filtrar por mes, y cambiar extension de archivo a .xls" %>
+<br/>
 <table id="listado1" class="table table-striped table-hover">
     <thead>
       <tr>
             <th>Cliente</th>
-            <th>Fecha Registro</th>
-            <th>Desarrollador</th>
             <th>Tarea</th>
+            <th>Desarrollador</th>
             <th>Proyecto</th>
             <th>HH</th>
-	    <th>Acciones</th>
-	    <th></th>
+            <th>Fecha Registro</th>
       </tr>
     </thead>
 
@@ -18,13 +19,11 @@
     <% @tareas_listado1.each do |tarea| %>
 	    <tr>
             <td><%= tarea.cliente.nombre %></td>
-            <td><%= tarea.fecha_registro.strftime("%m/%d/%Y") %></td>
+            <td><%= truncate(tarea.nombre, length: 40) %></td>
             <td><%= tarea.user.usuario %></td>
-            <td><%= truncate(tarea.nombre, length: 25) %></td>
 	    <td><%= tarea.proyecto.nombre.humanize %></td>
             <td><%= tarea.hh %></td>
-	    <td><%= detalles_link tarea %></td>
-	    <td><%= delete_link tarea_path(tarea) %></td>
+            <td><%= tarea.fecha_registro.strftime("%d %B %Y") %></td>
 	    </tr>
       <% end %>
     </tbody>
