--- a/app/views/listados2/index.html.erb
+++ b/app/views/listados2/index.html.erb
@@ -6,16 +6,15 @@
 
 	<div class="table-responsive">
 		
-	<table id="listado2" class="table table-striped table-hover">
+	<table class="table table-striped table-hover">
 		<thead>
 	<tr>
 	<th>Desarrollador</th>
 	<th>Tarea</th>
             <th>Fecha Registro</th>
+            <th>Fecha Creacion</th>
             <th>HH</th>
             <th>Proyecto</th>
-            <th>Modulo</th>
-            <th>Otro</th>
 	    <th>Acciones</th>
     </tr>
 	</thead>
@@ -23,22 +22,11 @@
 	<% @tareas_mes[mes].each do |tarea| %>
 		<tr>
 		            <td><%= tarea.user.usuario %></td>
-		            <td><%= truncate(tarea.nombre, length: 20) %></td>
-		            <td><%= tarea.fecha_registro %></td>
+			    <td><%= truncate(tarea.nombre, length: 20) %></td>
+			    <td><%= tarea.fecha_registro.strftime("%d %B %Y") %></td>
+			    <td><%= tarea.created_at.strftime("%d %B %Y") %></td>
 		            <td><%= tarea.hh %></td>
-		              <% if tarea.proyecto.blank? and tarea.otro.blank? %>
-			                      <td></td>
-		                      <td><%= tarea.modulo.nombre.humanize %></td>
-		                      <td></td>
-		              <% elsif tarea.proyecto.blank? and tarea.modulo.blank? %>
-			                              <td></td>
-		                              <td></td>
-		                              <td><%= tarea.otro.nombre.humanize %></td>
-		              <% else %>
-			                      <td><%= tarea.proyecto.nombre.humanize %></td>
-		                      <td></td>
-		                      <td></td>
-		              <% end  %>
+                            <td><%= tarea.proyecto.nombre.humanize %></td>
 		            <td><%= detalles_link tarea %></td>
 		            </tr>
 
@@ -47,8 +35,7 @@
 	</table>
 	</div>
 	<p>
-        Descarga 
-          <%= link_to "Excel", listados2_path(format: "xls") %>
+          <!--%= link_to "Excel", listados2_path(format: "xls") %-->
         </p>
 <% end  %>
 
