--- a/app/views/listados4/index.html.erb
+++ b/app/views/listados4/index.html.erb
@@ -30,8 +30,7 @@
 	</table>
 	</div>
 	<p>
-        Descarga 
-          <%= link_to "Excel", listados2_path(format: "xls") %>
+          <!--%= link_to "Excel", listados3_path(format: "xls") %-->
         </p>
 <% end  %>
 
