--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -14,13 +14,13 @@
 			  <div class="form-group">
 				  <%= f.label :cliente, :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.collection_select :cliente_id, Cliente.order(:nombre), :id,:nombre,{include_blank: true}, class: "form-control" %>
+					  <%= f.collection_select :cliente_id, @clientes, :id,:nombre,{include_blank: true}, class: "form-control" %>
 				  </div>
 			  </div>
 			  <div class="form-group">
 				  <%= f.label :proyecto, :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.grouped_collection_select :proyecto_id, Cliente.order(:nombre), :proyectos, :nombre, :id, :nombre,{include_blank: true}, class: "form-control" %>
+					  <%= f.grouped_collection_select :proyecto_id , @clientes, :p_a, :nombre, :id, :nombre,{include_blank: true}, class: "form-control" %>
 				  </div>
 			  </div>
 			  <div class="form-group">
