--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,8 @@
  *= require dataTables/extras/TableTools
  *= require dataTables/extras/TableTools_JUI
  *= require dc
- *= require_tree .
+ *= require layout 
+ *= require bootstrap-generators
+ *= require bootstrap-variables
+ *= require scaffolds 
  */
