--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,9 +1,11 @@
-<div class="page-header">
+<% if current_user.has_role? :admin %>
+	
+	<div class="page-header">
   <%= link_to new_cliente_path, :class => 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-plus"></span>
     Nuevo Cliente
   <% end %>
-  <h4>Listado Clientes</h4>
+<%= content_tag :h3, "Listado Clientes" %>
 </div>
 
 <div class="table-responsive">
@@ -28,3 +30,28 @@
     </tbody>
   </table>
 </div>
+
+<% else %>
+<%= content_tag :h3, "Listado Clientes" %>
+	
+<div class="table-responsive">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+            <th>Nombre</th>
+	    <th>Lugares</th>
+	    <th>Personal</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <%= content_tag_for(:tr, @clientes) do |cliente| %>
+	      <td><%= cliente.nombre.humanize %></td>
+              <td><%= link_to 'Lugares', cliente_lugares_path(cliente), class: "btn btn-success btn-sm" %></td>
+	      <td><%= link_to 'Responsables', cliente_responsables_path(cliente),  class: "btn btn-success btn-sm" %></td>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<% end %>
