--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MgapUser</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+<title>MgapUser</title>
+<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+<% if mobile_device? %>
+	<%= stylesheet_link_tag    "jquery.mobile-1.3.2" , media: "all", "data-turbolinks-track" => true %>
+  	<%= javascript_include_tag "jquery.mobile-1.3.2" %>
+<% end %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +29,13 @@
 			<% if current_user %>
 				<% unless current_user.has_role? :admin %>
 					<li><%= link_to "Tareas", tareas_path, "data-no-turbolink" => true %></li>
+					<li><%= link_to "Clientes", clientes_path %></li>
+					<% if mobile_device? %>
+						<li><%= link_to "Full", :mobile => 0 %></li>
+					<% else %>
+						<li><%= link_to "Movil", :mobile => 1 %></li>
+						
+					<% end %>
 				<%  end %>
 
 				<% if current_user.has_role? :admin %>
@@ -32,18 +43,11 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Proyectos<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><%= link_to "Proyectos en Curso", proyectos_path %></li>
-						<li><%= link_to "Proyectos Cerrados", proyectos_cerrados_path  %></li>
+						<li><%= link_to "Proyectos Cerrados", proyectos_cerrados_path, "data-no-turbolink" => true  %></li>
 					</ul>
 					</li>
 
-					<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Listados<b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><%= link_to "Mensual", listados1_path  %></li>
-						<li><%= link_to "Segun Desarrollador", listados3_path %></li>
-						<li><%= link_to "Segun Proyecto", listados4_path  %></li>
-					</ul>
-					</li>
+						<li><%= link_to "Listados", listados1_path, "data-no-turbolink" => true  %></li>
 
 					<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Reportes<b class="caret"></b></a>
@@ -55,7 +59,8 @@
 					<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Graficos<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><%= link_to "Segun Desarrollador", graficos1_path , "data-no-turbolink" => true %></li>
+						<li><%= link_to "Segun Desarrollador", graficos1_path %></li>
+						<li><%= link_to "Segun Proyecto", graficos2_path %></li>
 					</ul>
 					</li>
 
