--- a/app/views/lugares/_form.html.erb
+++ b/app/views/lugares/_form.html.erb
@@ -39,7 +39,7 @@
   </div>
   <div class="form-group">
     <div class="col-lg-offset-2 col-lg-10">
-      <%= f.submit :class => "btn btn-primary" %>
+	    <%= f.submit :class => "btn btn-primary", :value => "Guardar" %>
     </div>
   </div>
 <% end %>
