--- a/app/views/proyectos/index.html.erb
+++ b/app/views/proyectos/index.html.erb
@@ -11,8 +11,8 @@
     <thead>
       <tr>
             <th>Nombre</th>
+            <th>Cliente</th>
             <th>HH Planificadas</th>
-            <th>HH Dedicadas</th>
 	    <th>Acciones</th>
 	    <th></th>
 	    <th></th>
@@ -23,8 +23,9 @@
     <tbody>
       <%= content_tag_for(:tr, @proyectos) do |proyecto| %>
             <td><%= proyecto.nombre.humanize %></td>
+            <td><%= proyecto.cliente.nombre.humanize %></td>
 	    <td><%= proyecto.hh %></td>
-	    <td><%= proyecto.tareas.sum(:hh) %></td>
+	    <!--td><#%= proyecto.tareas.sum(:hh) %></td-->
 	    <td><%= link_to "Editar", edit_proyecto_path(proyecto), class: "btn btn-primary btn-sm " %></td>
 	    <td><%= detalles_link proyecto %></td>
 	    <td><%= delete_link proyecto_path(proyecto) %></td>
