--- a/app/views/proyectos_cerrados/index.html.erb
+++ b/app/views/proyectos_cerrados/index.html.erb
@@ -1,27 +1,27 @@
+
+<%= javascript_include_tag params[:controller] %>
+
 <h1>Listado Proyectos Cerrados</h1>
 
 <div class="table-responsive">
-  <table class="table table-striped table-hover">
+  <table id="proyectos_cerrados" class="table table-striped table-hover">
     <thead>
       <tr>
             <th>Nombre</th>
+            <th>Cliente</th>
             <th>HH Planificadas</th>
             <th>HH Dedicadas</th>
 	    <th>Acciones</th>
-	    <th></th>
-	    <th></th>
-	    <th></th>
       </tr>
     </thead>
 
     <tbody>
       <%= content_tag_for(:tr, @proyectos_c) do |proyecto| %>
             <td><%= proyecto.nombre.humanize %></td>
+            <td><%= proyecto.cliente.nombre.humanize %></td>
 	    <td><%= proyecto.hh %></td>
 	    <td><%= proyecto.tareas.sum(:hh) %></td>
-	    <!--td><#%= link_to "Editar", edit_proyecto_path(proyecto), class: "btn btn-primary btn-sm " %></td-->
 	    <td><%= link_to "Detalles", proyecto_cerrado_path(proyecto), class: "btn btn-warning btn-sm" %></td>
-	    <td><!--%= delete_link proyecto_path(proyecto) %--></td>
       <% end %>
     </tbody>
   </table>
