--- a/app/views/responsables/index.html.erb
+++ b/app/views/responsables/index.html.erb
@@ -15,10 +15,8 @@
     <thead>
       <tr>
             <th>Nombre</th>
+	    <th>Acciones</th>
             <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
       </tr>
     </thead>
 
