--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -14,7 +14,7 @@
   <table class="table table-striped table-hover" id="tareas_usuario">
     <thead>
       <tr>
-	    <th>Nombre Tarea</th>
+	    <th>Tarea</th>
 	    <th>Proyecto</th>
 	    <th>HH</th>
 	    <th>Fecha Registro</th>
@@ -26,7 +26,7 @@
 
     <tbody>
       <%= content_tag_for(:tr, @tareas) do |tarea| %>
-	      <td><%= truncate(tarea.nombre, length: 20) %></td>
+	      <td><%= truncate(tarea.actividad, length: 30) %></td>
 	      <td><%= tarea.proyecto.nombre.humanize %></td>
             <td><%= tarea.hh %></td>
             <td><%= tarea.fecha_registro.strftime("%d %B %Y") %></td>
