--- a/app/views/graficos1/index.html.erb
+++ b/app/views/graficos1/index.html.erb
@@ -21,7 +21,7 @@
 					</h4>
 				</div>
 				<div class="span4" id="g4">
-					<h4>Filtrar por Cliente 
+					<h4>Filtrar por Tipo de Tarea 
 						<a class="reset"
 							href="javascript:clienteChart.filterAll();dc.redrawAll();"
 							style="display: none;">
@@ -35,7 +35,15 @@
 
 <div class="container">
 	<div class="row">
-		<div class="span12" id='g1'>
+		<div class="span4" id='g5'>
+			<h4>HH Proyectadas vs Reales
+				<a class="reset"
+					href="javascript:hhChart.filterAll();dc.redrawAll();"
+					style="display: none;">
+					Reset</a>
+				</h4>
+		</div>
+		<div class="span8" id='g1'>
 			<h4>Tareas en HH en función del tiempo
 				<a class="reset"
 					href="javascript:hhChart.filterAll();dc.redrawAll();"
