--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,9 +31,9 @@
 					<li><%= link_to "Tareas", tareas_path, "data-no-turbolink" => true %></li>
 					<li><%= link_to "Clientes", clientes_path %></li>
 					<% if mobile_device? %>
-						<li><%= link_to "Full", :mobile => 0 %></li>
+						<li><!--%= link_to "Full", :mobile => 0 %--></li>
 					<% else %>
-						<li><%= link_to "Movil", :mobile => 1 %></li>
+						<li><!--%= link_to "Movil", :mobile => 1 %--></li>
 						
 					<% end %>
 				<%  end %>
@@ -69,6 +69,7 @@
 					<ul class="dropdown-menu">
 						<li><%= link_to "Usuarios", users_path %></li>
 						<li><%= link_to "Clientes", clientes_path %></li>
+						<li><%= link_to "Tipos Tareas", tipo_tareas_path %></li>
 					</ul>
 					</li>
 				<% end %>
