--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -47,6 +47,12 @@
 					  <%= f.grouped_collection_select(:responsable_planta_id, Cliente.order(:nombre), :responsables, :nombre, :id, :nombre,{include_blank: true}, class: "form-control") %>
 				  </div>
 			  </div>
+			  <div class="form-group">
+				  <%= f.label :tipo_tarea, :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.collection_select :tipo_tarea_id, TipoTarea.order(:nombre), :id,:nombre,{include_blank: false}, class: "form-control" %>
+				  </div>
+			  </div>
 		  </div>
  <div class="col-md-6 column">
 			  <div class="form-group">
