--- a/app/views/tareas/index.mobile.erb
+++ b/app/views/tareas/index.mobile.erb
@@ -5,7 +5,17 @@
 
 <ul data-role="listview">
 <% @tareas.each do |tarea| %>
-	<li><%= tarea.actividad %> - <%= tarea.fecha_registro.strftime("%d %b %Y") %> - <%= tarea.hh %></li>
+	<div class="ui-grid-a">
+	<div class="ui-block-a">
+	<li><%= tarea.actividad %> </li>
+		
+	</div>
+	<div class="ui-block-b">
+	<li><%= tarea.hh %></li>
+		
+	</div>
+		
+	</div>
 <% end %>
 </ul>
 
