--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -43,7 +43,7 @@
   </div>
   <div class="form-group">
     <div class="col-lg-offset-2 col-lg-10">
-	    <%= f.submit :class => "btn btn-primary", :value => "Guardar" %>
+	    <%= f.submit :class => "btn btn-primary", :value => "Guardar Cliente" %>
     </div>
   </div>
 <% end %>
