--- a/app/views/responsables/_form.html.erb
+++ b/app/views/responsables/_form.html.erb
@@ -32,7 +32,7 @@
   </div>
   <div class="form-group">
     <div class="col-lg-offset-2 col-lg-10">
-	    <%= f.submit :class => "btn btn-primary", :value => "Guardar" %>
+	    <%= f.submit :class => "btn btn-primary", :value => "Guardar Responsable" %>
     </div>
   </div>
 <% end %>
