--- a/app/views/tipo_tareas/_form.html.erb
+++ b/app/views/tipo_tareas/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="form-group">
 	  <div class="col-lg-offset-2 col-lg-10">
-		  <%= f.submit :class => "btn btn-primary", :value => "Guardar" %>
+		  <%= f.submit :class => "btn btn-primary", :value => "Guardar Tipo de tarea" %>
     </div>
   </div>
 <% end %>
