--- a/app/views/graficos1/index.html.erb
+++ b/app/views/graficos1/index.html.erb
@@ -77,6 +77,10 @@
 						<th>Proyecto</th>
 						<th>HH</th>
 						<th>Actividad</th>
+						<th>Módulo</th>
+						<th>R. Sistema</th>
+						<th>R. Planta</th>
+						<th>Lugar</th>
 					</tr>
 				</thead>
 			</table>
