--- a/app/views/listados2/index.html.erb
+++ b/app/views/listados2/index.html.erb
@@ -1,30 +1,28 @@
-<%= javascript_include_tag params[:controller] %>
-<%= content_tag :h2, "Tareas Mensuales " %>
+<%= content_tag :h3, "Reporte de Comparación Fechas de Registro vs Fechas de Creación Real de Tareas" %>
+<br/>
 
-<% @tareas_mes.keys.sort.reverse.each do |mes| %>
-	<h3><%= mes.strftime("%B %Y") %></h3>
+<% @tareas_d.keys.sort.each do |desarrollador| %>
+	<%= content_tag :h3, User.find(desarrollador).usuario.humanize %>
 
 	<div class="table-responsive">
 		
 	<table class="table table-striped table-hover">
 		<thead>
 	<tr>
-	<th>Desarrollador</th>
-	<th>Tarea</th>
+	<th>Actividad</th>
+            <th>Fecha Creación</th>
             <th>Fecha Registro</th>
-            <th>Fecha Creacion</th>
             <th>HH</th>
             <th>Proyecto</th>
 	    <th>Acciones</th>
     </tr>
 	</thead>
 	<tbody>
-	<% @tareas_mes[mes].each do |tarea| %>
+	<% @tareas_d[desarrollador].each do |tarea| %>
 		<tr>
-		            <td><%= tarea.user.usuario %></td>
-			    <td><%= truncate(tarea.nombre, length: 20) %></td>
-			    <td><%= tarea.fecha_registro.strftime("%d %B %Y") %></td>
-			    <td><%= tarea.created_at.strftime("%d %B %Y") %></td>
+			    <td><%= truncate(tarea.actividad, length: 30) %></td>
+			    <td><%= l tarea.created_at, format: :short %></td>
+			    <td><%= l tarea.fecha_registro, format: :short %></td>
 		            <td><%= tarea.hh %></td>
                             <td><%= tarea.proyecto.nombre.humanize %></td>
 		            <td><%= detalles_link tarea %></td>
@@ -34,8 +32,4 @@
 	</tbody>
 	</table>
 	</div>
-	<p>
-          <!--%= link_to "Excel", listados2_path(format: "xls") %-->
-        </p>
 <% end  %>
-
