--- a/app/views/proyectos/_etapa_fields.html.erb
+++ b/app/views/proyectos/_etapa_fields.html.erb
@@ -15,11 +15,11 @@
   <div class="form-group">
     <%= f.label "Fecha Inicio etapa", :class => "col-lg-2 control-label" %>
     <div class="col-lg-3">
-	    <%= f.text_field :fecha_inicio, :id => "datepicker3", :class => "form-control" %>
+	    <%= f.text_field :fecha_inicio, :class => "form-control dp-p" %>
     </div>
     <%= f.label "Fecha Fin etapa", :class => "col-lg-2 control-label" %>
     <div class="col-lg-3">
-	    <%= f.text_field :fecha_fin, :id => "datepicker4", :class => "form-control" %>
+	    <%= f.text_field :fecha_fin, :class => "form-control dp-p" %>
     </div>
     <div class="col-lg-2">
 	<%= link_to_remove_association "Borrar etapa", f, :class => "btn btn-sm btn-danger" %>
