--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -1,14 +1,24 @@
 <%= javascript_include_tag params[:controller] %>
 
 <%= simple_form_for(@tarea, :html => { :class => "form-horizontal" }) do |f| %>
-	<% if notification = f.error_notification %>
-    <div class="alert alert-error fade in">
-	      <a class="close" data-dismiss="alert" href="#">&times;</a>
-	      <%= notification %>
-	    </div>
-	  <% end %>
+  <% if @tarea.errors.any? %>
+    <div class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <h4>No se pudo registrar esta Tarea porque se encontró <%= @tarea.errors.count %>
+	      <% if @tarea.errors.count==1 %> 
+		      <%= render text: "error" %>
+	      <% else  %>
+		      <%= render text: "errores" %>
+	      <% end %>
+      </h4>
 
-
+      <ul>
+      <% @tarea.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="row clearfix">
 	 	  <div class="col-md-6 column">
 			  <div class="form-group">
@@ -30,7 +40,7 @@
 				  </div>
 			  </div>
 			  <div class="form-group">
-				  <%= f.label "Planta", :class => "col-sm-4 control-label" %>
+				  <%= f.label :lugar, :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
 					  <%= f.grouped_collection_select :lugar_id, Cliente.order(:nombre), :lugares, :nombre, :id, :nombre,{include_blank: true}, class: "form-control" %>
 				  </div>
@@ -80,7 +90,7 @@
 				  </div>
 			  </div>
 			  <div class="form-group">
-				  <%= f.label "Fecha Tarea", :class => "col-sm-4 control-label" %>
+				  <%= f.label :fecha_registro, :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
 					  <%= f.text_field :fecha_registro, :value => Date.today ,:id => "datepicker1", :class => "form-control" %>
 				  </div>
