--- a/app/views/tareas/copia.html.erb
+++ b/app/views/tareas/copia.html.erb
@@ -6,6 +6,7 @@
   <h3>Copiar tarea</h3>
 </div>
 
+<%= javascript_include_tag "tareas_copia" %>
 
 <%= simple_form_for(@tarea, :html => { :class => "form-horizontal" }) do |f| %>
 	<% if notification = f.error_notification %>
