--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -30,7 +30,7 @@
 	      <td><%= truncate(tarea.actividad, length: 30) %></td>
 	      <td><%= tarea.proyecto.nombre.humanize %></td>
             <td><%= tarea.hh %></td>
-            <td><%= tarea.fecha_registro.strftime("%d %B %Y") %></td>
+            <td><%= l tarea.fecha_registro, format: :short %></td>
 	    <td><%= link_to "Copiar",copiar_tarea_path(tarea) , class: "btn btn-success btn-sm", "data-no-turbolink" => true %> </td>
 	    <td><%= detalles_link tarea %></td>
 	    <td><%= delete_link tarea_path(tarea) %></td>
