--- a/app/views/tipo_tareas/_form.html.erb
+++ b/app/views/tipo_tareas/_form.html.erb
@@ -1,8 +1,14 @@
-<%= form_for(@tipo_tarea, :html => { :class => "form-horizontal" }) do |f| %>
+<%= simple_form_for(@tipo_tarea, :html => { :class => "form-horizontal" }) do |f| %>
   <% if @tipo_tarea.errors.any? %>
     <div class="alert alert-danger alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <h4><%= pluralize(@tipo_tarea.errors.count, "error") %> prohibited this tipo_tarea from being saved:</h4>
+      <h4>No se pudo registrar este Tipo de Tarea porque se encontró <%= @tipo_tarea.errors.count %>
+	      <% if @tipo_tarea.errors.count==1 %> 
+		      <%= render text: "error" %>
+	      <% else  %>
+		      <%= render text: "errores" %>
+	      <% end %>
+      </h4>
 
       <ul>
       <% @tipo_tarea.errors.full_messages.each do |msg| %>
@@ -11,7 +17,6 @@
       </ul>
     </div>
   <% end %>
-
   <div class="form-group">
     <%= f.label :nombre, :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
