--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,14 @@
 <%= simple_form_for(@user, :html => { :class => "form-horizontal" }) do |f| %>
   <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+    <div class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <h4>No se pudo registrar este Usuario porque se encontró <%= @user.errors.count %>
+	      <% if @user.errors.count==1 %> 
+		      <%= render text: "error" %>
+	      <% else  %>
+		      <%= render text: "errores" %>
+	      <% end %>
+      </h4>
 
       <ul>
       <% @user.errors.full_messages.each do |msg| %>
@@ -20,7 +27,7 @@
   <div class="form-group">
     <%= f.label :email, :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
-      <%= f.text_field :email, :class => "form-control" %>
+      <%= f.email_field :email, :class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
@@ -42,7 +49,7 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :password_confirmation, :class => "col-lg-2 control-label" %>
+    <%= f.label "Password confirmación", :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
       <%= f.password_field :password_confirmation, :class => "form-control" %>
     </div>
@@ -51,12 +58,6 @@
   <div class="form-group">
 	  <% if current_user.has_role? :admin %>
 
-  <div class="form-group">
-    <%= f.label "Puede acceder al sistema?", :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.check_box :activo, :class => "form-control" %>
-    </div>
-  </div>
 
 					<%= f.label "Permisos", :class => "col-lg-2 control-label" %>
 				<%  end %>
