--- a/app/views/proyectos_cerrados/index.html.erb
+++ b/app/views/proyectos_cerrados/index.html.erb
@@ -12,6 +12,7 @@
             <th>HH Planificadas</th>
             <th>HH Dedicadas</th>
 	    <th>Acciones</th>
+	    <th></th>
       </tr>
     </thead>
 
@@ -22,6 +23,7 @@
 	    <td><%= proyecto.hh %></td>
 	    <td><%= proyecto.tareas.sum(:hh) %></td>
 	    <td><%= link_to "Detalles", proyecto_cerrado_path(proyecto), class: "btn btn-warning btn-sm" %></td>
+	    <td><%= delete_link proyecto_cerrado_path(proyecto) %></td>
       <% end %>
     </tbody>
   </table>
