--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
 					<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Reportes<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><%= link_to "Fecha Registro vs Fecha Creacion", listados2_path  %></li>
+						<li><%= link_to "Registro vs Fecha Creacion", listados2_path  %></li>
 					</ul>
 					</li>
 
