--- a/app/views/proyectos/_etapa_fields.html.erb
+++ b/app/views/proyectos/_etapa_fields.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_include_tag params[:controller] %>
 
-<div class="nested-fields">
+<div class="nested-fields" id="nested-f">
   <div class="form-group">
     <%= f.label "Nombre etapa", :class => "col-lg-2 control-label" %>
     <div class="col-lg-3">
